# gaussian-volume-compression

./: .gitignore  .gitmodules  LICENSE  NOTICE  README.md  environment.yml  flash.py  raw_to_vti.py  run_compare.py  save_samples.py  save_sampling2.py  splat.py  test_sampling.py  train.py  volume_metrics.py  vtu_mem.py
arguments/: __init__.py
diff-gaussian-rasterization/: CMakeLists.txt  ext.cpp  ext.cu  rasterize_points.cu  rasterize_points.h  setup.py
diff-gaussian-rasterization/bvh_diff_gaussian_rasterization/: __init__.py
diff-gaussian-rasterization/cuda_rasterizer/: auxiliary.h  backward.cu  backward.h  config.h  forward.cu  forward.h  rasterizer.h  rasterizer_impl.cu  rasterizer_impl.h  utils.cu  utils.h
diff-gaussian-rasterization/diff_gaussian_rasterization/: __init__.py
finals/EARTHQUAKE1024/: cfg_args
finals/EARTHQUAKE1024/point_cloud/iteration_0/: point_cloud.ply
finals/EARTHQUAKE1024S/: cfg_args
finals/EARTHQUAKE1024S/point_cloud/iteration_0/: point_cloud_ascii.ply
finals/IMPACT1024WVEG/: cfg_args
finals/IMPACT1024WVEGS/: cfg_args
finals/MITO1024WVEG/: cfg_args
finals/MITO1024WVEG/point_cloud/iteration_0/: point_cloud.ply  point_cloud_ascii.ply
finals/MITO1024WVEGS/: cfg_args
finals/MITO64W-VEG/: cfg_args
finals/MITO64WVEGS/: cfg_args
gaussian_renderer/: __init__.py
gpu_sampling/: CMakeLists.txt  ext.cpp  sample_mesh.cu  sample_mesh.h  setup.py
gpu_sampling/gpu_mesh_sampling/: __init__.py
scene/: __init__.py  dataset_readers.py  gaussian_model.py
utils/: debug_utils.py  reloc_utils.py
(+10 files in other folders)
